# super-stt-openai

./: Cargo.toml  README.md  backend.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: live_openai.rs  protocol.rs  transcribe_round_trip.rs
tests/common/: mod.rs
